# local-rag-memo-app

./: .gitignore  BACKLOG.md  README.md  main.py  pyproject.toml  requirements.txt  requirements_install.txt  uninstall.sh
app/: __init__.py
app/controller/: __init__.py  indexing_worker.py  query_worker.py  rag_controller.py
app/domain/: __init__.py  chunking_service.py  conversation_manager.py  document_processor.py  embedding_service.py  query_engine.py
app/infrastructure/: claude_client.py  config_store.py  document_store.py  llm_client.py  ollama_client.py  vector_store.py
app/ui/: __init__.py  chat_panel.py  collection_panel.py  document_panel.py  history_panel.py  indexing_progress.py  main_window.py  menu_bar_app.py  onboarding_dialog.py  settings_dialog.py  source_viewer.py
docs/test-cases/: rag-memo-p1p2-testcases.md  rag-memo-testcases.md
resources/styles/: dark_theme.qss
tests/: conftest.py  test_chat_panel.py  test_chunking_service.py  test_config_store.py  test_conversation_manager.py  test_document_processor.py  test_document_store.py  test_embedding_service.py  test_history_panel.py  test_menu_bar.py  test_query_engine.py  test_tags_export.py  test_vector_store.py
